# particle-life-parallel

./: .gitignore  README.md
particle_life/: CMakeLists.txt
particle_life/src/: main.cpp  ofApp.cpp  ofApp.h
